-phone number util fix, removed unecessary checks, fixed custom otp view

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -172,8 +172,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.commcare.activities.connect.ConnectIdActivity"
-            android:exported="true" />
+            android:name="org.commcare.activities.connect.ConnectIdActivity" />
         <activity
             android:label="@string/application_name"
             android:name="org.commcare.activities.LoginActivity"
