--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,7 @@ dependencies {
     implementation fileTree(include: '*.jar', exclude: 'regexp-me.jar', dir: 'libs')
     implementation(name: 'htmlspanner-custom', ext: 'aar')
     implementation 'com.github.dimagi:zebra-print-android:v1.3'
-    implementation (name: 'LibSimprints-1.0.12', ext: 'aar')
+    implementation 'com.simprints:libsimprints:2024.2.2'
     implementation (name: 'mapbox-android-accounts-0.2.0', ext: 'aar')
     implementation (name: 'realm-android-library-4.1.1', ext: 'aar')
     implementation (name: 'volley-1.1.0', ext: 'aar')
