--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ repositories {
         dirs 'libs'
     }
     maven { url 'https://jitpack.io' }
+    maven {url 'https://repository.liferay.com/nexus/content/repositories/public/'}
 }
 
 configurations {
@@ -71,10 +72,6 @@ dependencies {
     implementation(name: 'htmlspanner-custom', ext: 'aar')
     implementation 'com.github.dimagi:zebra-print-android:v1.3'
     implementation 'com.simprints:libsimprints:2024.2.2'
-    implementation (name: 'mapbox-android-accounts-0.2.0', ext: 'aar')
-    implementation (name: 'realm-android-library-4.1.1', ext: 'aar')
-    implementation (name: 'volley-1.1.0', ext: 'aar')
-    implementation (name: 'storage-2.1.0', ext: 'aar')
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
@@ -119,12 +116,13 @@ dependencies {
     implementation "io.noties.markwon:ext-tables:$markwon_version"
     implementation "io.noties.markwon:ext-strikethrough:$markwon_version"
 
+    // Kujaku
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.snatik:storage:2.1.0'
     implementation('io.ona.kujaku:library:0.9.0') {
         exclude module: 'xpp3'
         exclude module: 'volley'
         exclude module: 'storage'
-        exclude group: 'com.mapbox.mapboxsdk', module: 'mapbox-android-accounts'
-        exclude group: 'io.realm'
     }
     implementation 'androidx.work:work-runtime:2.10.0'
     implementation 'androidx.work:work-runtime-ktx:2.10.0'
