--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -132,6 +132,23 @@
 -keep class kotlin.collections.ArraysKt { *; }
 -keep class kotlin.collections.CollectionsKt { *; }
 -keep class kotlin.text.StringsKt { *; }
+# Keep Kotlin stdlib used in androidx.test
+-keep class kotlin.** { *; }
+-dontwarn kotlin.**
+
+# Keep metadata used for Kotlin reflection
+-keepclassmembers class ** {
+    @kotlin.Metadata *;
+}
+
+# Prevent stripping of Lazy initialization, used in AndroidX Test
+-keepclassmembers class kotlin.LazyKt {
+    public static <methods>;
+}
+
+
+# Used by Espresso 3.5+
+-keep class androidx.concurrent.futures.ResolvableFuture { *; }
 
 # Guava Config Start
 -dontwarn javax.lang.model.element.Modifier
