--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,9 +85,14 @@ dependencies {
     implementation 'joda-time:joda-time:2.9.4'
     implementation 'net.zetetic:android-database-sqlcipher:4.5.3@aar'
     implementation 'androidx.sqlite:sqlite:2.2.0'
+    implementation 'com.google.android.gms:play-services-auth:21.3.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:18.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.android.gms:play-services-identity:18.1.0'
+    implementation 'com.google.android.gms:play-services-base:18.5.0'
+
     implementation('org.apache.james:apache-mime4j:0.7.2') {
         exclude module: 'commons-io'
     }
@@ -419,7 +424,6 @@ android {
             resValue 'string', 'application_name', applicationName
         }
 
-
         cccStaging {
             buildConfigField 'String', 'CCC_HOST', "\"connect-staging.dimagi.com\""
 
@@ -607,7 +611,7 @@ static def numbersToLetters(String version) {
             case '8': words.append('eight'); break
             case '9': words.append('nine'); break
             case '0': words.append('zero'); break
-            default: break // skip non-numeric'
+            default: break // skip non-numeric
         }
     }
     return words.toString()
