Update proguard rules

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -150,6 +150,10 @@
 # Used by Espresso 3.5+
 -keep class androidx.concurrent.futures.ResolvableFuture { *; }
 
+# Keep desugared Java classes
+-keep class j$.util.** { *; }
+-dontwarn j$.util.**
+
 # Guava Config Start
 -dontwarn javax.lang.model.element.Modifier
 
