Update proguard rules

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -75,7 +75,8 @@
 
 -flattenpackagehierarchy
 
--keep class net.sqlcipher.** { *; }
+-keep class net.zetetic.database.sqlcipher.* { *; }
+-keep class net.zetetic.sqlcipher.** { *; }
 
 -keep public class * extends android.view.View {
     public <init>(android.content.Context);
