Connect Message review

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -147,7 +147,7 @@
         </receiver>
         <activity
             android:name="org.commcare.activities.connect.ConnectMessagingActivity"
-            android:exported="true" >
+            android:exported="false" >
         </activity>
         <activity
             android:label="@string/application_name"
@@ -187,7 +187,8 @@
         <activity android:name="org.commcare.activities.RootMenuHomeActivity" />
         <activity android:name="org.commcare.activities.MenuActivity" />
         <activity
-            android:name="org.commcare.activities.connect.ConnectActivity" />
+            android:name="org.commcare.activities.connect.ConnectActivity"
+            android:exported="false"/>
         <service android:name="com.google.android.gms.metadata.ModuleDependencies"
             android:enabled="false"
             android:exported="false"
