--- a/app/build.gradle
+++ b/app/build.gradle
@@ -160,6 +160,7 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "com.google.firebase:firebase-auth:22.3.0"
 }
 
 ext {
