--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -171,7 +171,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.commcare.activities.connect.ConnectIdActivity"
+            android:name="org.commcare.activities.connect.PersonalIdActivity"
             android:screenOrientation="portrait"/>
         <activity
             android:label="@string/application_name"
