Update ProGuard for instrumentation tests

--- a/app/test-proguard.cfg
+++ b/app/test-proguard.cfg
@@ -258,3 +258,5 @@
 -dontwarn org.objectweb.asm.MethodVisitor
 -dontwarn org.objectweb.asm.Opcodes
 -dontwarn org.objectweb.asm.Type
+-dontwarn com.google.protobuf.GeneratedMessageLite$MergeFromVisitor
+-dontwarn com.google.protobuf.GeneratedMessageLite$Visitor
