Revert "Exclude Companion classes from JaCoCo coverage report"
This reverts commit 22b057e2cb9c0033ef93a7c09ee7a7c32da1d3c3.

--- a/app/jacoco.gradle
+++ b/app/jacoco.gradle
@@ -22,8 +22,7 @@ task jacocoTestReport(type: JacocoReport, dependsOn: ['testCommcareDebugUnitTest
                       '**/Manifest*.*',
                       '**/*Test*.*',
                       'android/**/*.*',
-                      '**/data/models/*',
-                      '**/*$Companion.*']
+                      '**/data/models/*']
     def classes = fileTree(dir: "${project.buildDir}/intermediates/javac/commcareDebug/classes/", excludes: fileFilter)
     getClassDirectories().setFrom(files([classes]))
 
