Disable performance monitoring during instrumentation

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,7 @@ android.nonFinalResIds=false
 
 # Enables Gradle Configuration Cache to improve build performance
 org.gradle.configuration-cache=true
+
+# Set this flag to 'false' to disable @AddTrace annotation processing and automatic monitoring of HTTP/S network
+# requests for all build variants at compile time.
+firebasePerformanceInstrumentationEnabled=false
