Disable Firebase Perf instrumentation for debug builds

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -485,6 +485,10 @@ android {
             // disable crashlytics
             buildConfigField 'boolean', 'USE_CRASHLYTICS', 'false'
             ext.enableCrashlytics = false
+
+            FirebasePerformance {
+                instrumentationEnabled false
+            }
         }
 
         release {
