--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -146,7 +146,7 @@
             </intent-filter>
         </receiver>
         <activity
-            android:name="org.commcare.activities.connect.ConnectMessagingActivity" android:exported="true">
+            android:name="org.commcare.activities.connect.ConnectMessagingActivity">
         </activity>
         <activity
             android:label="@string/application_name"
