-New worker history flow designs -Adapters and implementation of api -Designed view to share on whatsapp

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -621,6 +621,9 @@
         </service>
 
         <activity android:name="org.commcare.activities.connect.PersonalIdCredentialActivity"/>
+    <activity
+        android:name="org.commcare.activities.connect.SelectedPersonalIdCredentialActivity"
+        android:exported="false"/>
 
     </application>
 
