--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ apply plugin: 'com.google.firebase.crashlytics'
 apply from: 'jacoco.gradle'
 apply plugin: 'com.google.firebase.firebase-perf'
 apply plugin: "androidx.navigation.safeargs"
+apply plugin: "kotlin-parcelize"
 
 
 repositories {
