- progaurd files added

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -235,4 +235,7 @@
 # androidx.test.ext.truth.content.IntentSubject.hasAction fails in it-tests without this
 -keep class com.google.common.base.Preconditions { *; }
 
+# Keep all kotlinx serialization-related classes and methods
+-keep class kotlinx.serialization.** { *; }
+
 # Guava Config End
