--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,6 +173,7 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:$cameraX_version"
     implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.1.0'
     implementation "com.google.firebase:firebase-auth:22.3.0"
+    //Tobe removed with nav version 2.9
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
 
 }
