--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,7 +127,7 @@ dependencies {
     // Kujaku
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.snatik:storage:2.1.0'
-    implementation('io.ona.kujaku:library:0.9.0') {
+    implementation ('io.ona.kujaku:library:0.10.6-2-SNAPSHOT') {
         exclude module: 'xpp3'
         exclude module: 'volley'
         exclude module: 'storage'
