Add Mapbox download token

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,15 @@ repositories {
     }
     maven {
         url 'https://api.mapbox.com/downloads/v2/releases/maven'
+        authentication {
+            basic(BasicAuthentication)
+        }
+        credentials {
+            // Do not change the username below.
+            // This should always be `mapbox` (not your username).
+            username = 'mapbox'
+            password = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?: ''
+        }
     }
 }
 
