--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,6 +145,8 @@ dependencies {
     // Kujaku
     implementation ('io.ona.kujaku:library:0.10.6-2-SNAPSHOT') {
         exclude module: 'xpp3'
+        exclude module: 'appcompat'
+        exclude module: 'material'
     }
     implementation 'androidx.work:work-runtime:2.10.0'
     implementation 'androidx.work:work-runtime-ktx:2.10.0'
